# playthings

./: .gitignore  README.md  index.html
c/2048/: .gitignore  2048.c  Makefile  README.md
c/brainfuck/: .gitignore  README.md  main.c  run
c/canacon/: .gitignore  README.md  convkana.c  convkana.h  main.c  pattern1.h  run
c/change-wallpaper/: .gitignore  README.md  build.bat  build.cmd  main.c
c/da/: da.h  test_da.c  test_da_array.c
c/da_array/: build.sh  da_array.h
c/game-of-life-gba/: .gitignore  Makefile  README.md
c/minigrep/: README.md  main.c
c/ook/: .gitignore  README.md  main.c  run
c/opengl/: 00-window.c  01-multi-triangle.c  01-triangle.c
c/pbit/: .gitignore  Makefile  README.md  pbit.c  test64bit
c/regex.h/: README.md
c/snake_raylib/: .gitignore  README.md  main.c  main_customized.c
c/sokol_test/: CMakeLists.txt  README.md  sokol_test.c
c/sokol_test/sokol/: shell.html  sokol.c
c/tohex/: README.md  build.bat
c/verse-c/: .gitignore  README.md  build.sh
d/gh-d/: .gitignore  dub.json
d/shitaraba-d/: .gitignore  dub.json
d/verse-d/: .gitignore  dub.json  dub.selections.json
docs/: gui.js  index.html
go/calendar/: README.md  main.go
go/game-of-life/: README.md  go.mod  main.go  main_linux.go  main_windows.go
go/go_update/: README.md  go_update.go
go/go_update_linux/: README.md  go.mod  main.go
go/go_update_windows/: README.md
go/gohelp-helper/: go.mod  gohelp.cmd  main.go
go/mymd/: README.md  go.mod  go.sum  main.go  mymd.tmpl.html
go/rentry-edit/: README.md  go.mod  main.go
go/tanuki/: README.md  go.mod  go.sum  main.go
go/tic-tac-toe/: README.md  build.bash  main.go
go/verse/: README.md  go.mod  go.sum  main.go
go/verse-server/: README.md  go.mod  main.go  scryping.go
go/vim_update/: README.md  vim_update.go
godot/game-of-life/: Game.gd  Game.tscn  Grid.png.import  README.md  export_presets.cfg  project.godot
javascript/game-of-life-react/: README.md  package-lock.json  package.json
make/tmpl-1/: .gitignore  Makefile  README.md  depend.mk
markdown/: README.md
nim/bs/: README.md  bs.nim  config.nims
nim/canvas/: README.md  canvas.nim  index.html  main.js  main.nim
nim/cat/: .gitignore  README.md  main.nim  parseopta.nim  t  test_creator.py
nim/cat_plan9/: README.md  main.nim
nim/conway-js/: README.md  canvas.nim  index.html  main.js  main.nim
nim/delete_duplicate_path/: README.md  delete_duplicate_path.nim
nim/diary_search/: diary_search.nim
nim/do/: README.md  delete_duplicate_path.nim  diary_search.nim  do.nim  gitup.nim  shitaraba.nim  (+3 more)
p5js/: index.html
rust/chip8/: Cargo.toml
rust/chip8/.cargo/: config
rust/chip8/rom/: 0.ch8  number.ch8
rust/chip8/src/: config.rs  gfx.rs  input.rs  lib.rs  main.rs  vm.rs
rust/verse/: Cargo.toml  README.md
rust/verse/src/: main.rs
v/: v_update.v
(+349 files in other folders)
