

[package]
name = "chip8"
version = "0.1.0"
authors = ["310 <arthurcdx@yahoo.co.jp>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32"
rand = "0.7"
# [[bin]]
# name = "main"
# path = "src/sdl2/main.rs"
